--- a/src/styles/main.apalancar.css
+++ b/src/styles/main.apalancar.css
@@ -1082,7 +1082,7 @@ textarea.has-error {
         display: none;
     }
     .reset-password .user-form .btn-primary {
-        max-width: 300px;
+        max-width: 100%;
     }
     .header .header_panel-right {
         height: 86px;
