--- a/src/styles/main.example.css
+++ b/src/styles/main.example.css
@@ -2321,7 +2321,7 @@ ul {
         color: #333;
     }
     .user-form .btn-primary {
-        max-width: 130px;
+        max-width: 100%;
         padding: 1em 2em;
     }
     .user-form a {
